--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "ws": "^8.18.0"
   }
 }
